force-app/main/default/objects/IncomeBenefits__c.object
<CustomObject>
    <description>IncomeBenefits.csv includes data from:

4.02 Income and Sources
4.03 Non-Cash Benefits
4.04 Health Insurance
P4 Connection with SOAR
W3 Medical Assistance</description>
    <fields>
        <fullName>ADAP__c</fullName>
        <label>ADAP</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>hmisNoYesReasonsMissingData</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>API_ADAP__c</fullName>
        <formula>TRIM(LEFT(TEXT(  ADAP__c  ),FIND(&quot;:&quot;, TEXT( ADAP__c ))-1))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>API_ADAP</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>API_AlimonyAmount__c</fullName>
        <formula>IF(ISBLANK(AlimonyAmount__c),&quot;&quot;,text(floor(AlimonyAmount__c)) &amp;&quot;.&quot;&amp; lpad(text((AlimonyAmount__c-floor(AlimonyAmount__c))*100),2,&quot;0&quot;))</formula>
        <label>API_AlimonyAmount</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>API_Alimony__c</fullName>
        <formula>TRIM( LEFT( TEXT( Alimony__c ) , FIND( &quot;:&quot;, TEXT(Alimony__c))-1) )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>API_Alimony</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>API_BenefitsFromAnySource__c</fullName>
        <formula>TRIM( LEFT( TEXT( BenefitsfromAnySource__c ) , FIND( &quot;:&quot;, TEXT(BenefitsfromAnySource__c ))-1) )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>API_BenefitsFromAnySource</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>API_COBRA__c</fullName>
        <formula>TRIM( LEFT( TEXT(COBRA__c) , FIND( &quot;:&quot;, TEXT(COBRA__c))-1) )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>API_COBRA</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>API_ChildSupportAmount__c</fullName>
        <formula>IF(ISBLANK(ChildSupportAmount__c),&quot;&quot;,text(floor(ChildSupportAmount__c)) &amp;&quot;.&quot;&amp; lpad(text((ChildSupportAmount__c-floor(ChildSupportAmount__c))*100),2,&quot;0&quot;))</formula>
        <label>API_ChildSupportAmount</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>API_ChildSupport__c</fullName>
        <formula>TRIM( LEFT( TEXT( ChildSupport__c ) , FIND( &quot;:&quot;, TEXT(ChildSupport__c))-1) )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>API_ChildSupport</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>API_ConnectionWithSOAR__c</fullName>
        <formula>TRIM( LEFT( TEXT( ConnectionWithSOAR__c ) , FIND( &quot;:&quot;, TEXT(ConnectionWithSOAR__c ))-1) )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>API_ConnectionWithSOAR</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>API_DOtherBenefitsSourceIdentify__c</fullName>
        <formula>OtherBenefitsSourceSpecify__c</formula>
        <label>API_DOtherBenefitsSourceIdentify</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>API_DataCollectionStage__c</fullName>
        <formula>TRIM(LEFT(TEXT( DataCollectionStage__c ),FIND(&quot;:&quot;, TEXT(DataCollectionStage__c ))-1))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>API_DataCollectionStage</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>API_EarnedAmount__c</fullName>
        <formula>IF(ISBLANK(EarnedAmount__c),&quot;&quot;,text(floor(EarnedAmount__c)) &amp;&quot;.&quot;&amp; lpad(text((EarnedAmount__c-floor(EarnedAmount__c))*100),2,&quot;0&quot;))</formula>
        <label>API_EarnedAmount</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>API_Earned__c</fullName>
        <formula>TRIM( LEFT( TEXT( Earned__c ) , FIND( &quot;:&quot;, TEXT(Earned__c ))-1) )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>API_Earned</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>API_EmployerProvided__c</fullName>
        <formula>TRIM( LEFT( TEXT( EmployerProvided__c) , FIND( &quot;:&quot;, TEXT(EmployerProvided__c))-1) )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>API_EmployerProvided</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>API_GAAmount__c</fullName>
        <formula>IF(ISBLANK(GeneralAssistanceAmount__c),&quot;&quot;,text(floor( GeneralAssistanceAmount__c )) &amp;&quot;.&quot;&amp; lpad(text((GeneralAssistanceAmount__c-floor(GeneralAssistanceAmount__c))*100),2,&quot;0&quot;))</formula>
        <label>API_GAAmount</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>API_GA__c</fullName>
        <formula>TRIM( LEFT( TEXT( GeneralAssistance__c) , FIND( &quot;:&quot;, TEXT(GeneralAssistance__c))-1) )</formula>
        <label>API_GA</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>API_IncomeFromAnySource__c</fullName>
        <formula>TRIM( LEFT( TEXT( IncomeFromAnySource__c ) , FIND( &quot;:&quot;, TEXT(IncomeFromAnySource__c))-1) )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>API_IncomeFromAnySource</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>API_IndianHealthServices__c</fullName>
        <formula>TRIM( LEFT( TEXT( IndianHealthServices__c) , FIND( &quot;:&quot;, TEXT(IndianHealthServices__c))-1) )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>API_IndianHealthServices</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>API_InformationDate__c</fullName>
        <formula>Text(InformationDate__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>API_InformationDate</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>API_InsuranceFromAnySource__c</fullName>
        <formula>TRIM( LEFT( TEXT( InsuranceFromAnySource__c ) , FIND( &quot;:&quot;, TEXT(InsuranceFromAnySource__c))-1) )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>API_InsuranceFromAnySource</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>API_Medicaid__c</fullName>
        <formula>TRIM( LEFT( TEXT( Medicaid__c) , FIND( &quot;:&quot;, TEXT(Medicaid__c ))-1) )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>API_Medicaid</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>API_Medicare__c</fullName>
        <formula>TRIM( LEFT( TEXT( MEDICARE__c ) , FIND( &quot;:&quot;, TEXT(MEDICARE__c ))-1) )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>API_Medicare</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>API_NoADAPReason__c</fullName>
        <formula>TRIM(LEFT(TEXT( NoADAPReason__c ),FIND(&quot;:&quot;, TEXT( NoADAPReason__c ))-1))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>API_NoADAPReason</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>API_NoCOBRAReason__c</fullName>
        <formula>TRIM(LEFT(TEXT( NoCOBRAReason__c ),FIND(&quot;:&quot;, TEXT( NoCOBRAReason__c ))-1))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>API_NoCOBRAReason</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>API_NoEmployerProvidedReason__c</fullName>
        <formula>TRIM(LEFT(TEXT( NoEmployerProvidedReason__c ),FIND(&quot;:&quot;, TEXT( NoEmployerProvidedReason__c ))-1))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>API_NoEmployerProvidedReason</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>API_NoIndianHealthServicesReason__c</fullName>
        <formula>TRIM(LEFT(TEXT( NoIndianHealthServicesReason__c ),FIND(&quot;:&quot;, TEXT( NoIndianHealthServicesReason__c ))-1))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>API_NoIndianHealthServicesReason</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>API_NoMedicaidReason__c</fullName>
        <formula>TRIM(LEFT(TEXT( NoMedicaidReason__c  ),FIND(&quot;:&quot;, TEXT( NoMedicaidReason__c  ))-1))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>API_NoMedicaidReason</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>API_NoMedicareReason__c</fullName>
        <formula>TRIM(LEFT(TEXT( NoMedicareReason__c  ),FIND(&quot;:&quot;, TEXT( NoMedicareReason__c  ))-1))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>API_NoMedicareReason</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>API_NoPrivatePayReason__c</fullName>
        <formula>TRIM(LEFT(TEXT( NoPrivatePayReason__c ),FIND(&quot;:&quot;, TEXT(NoPrivatePayReason__c ))-1))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>API_NoPrivatePayReason</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>API_NoRyanWhiteReason__c</fullName>
        <formula>TRIM(LEFT(TEXT( NoRyanWhiteReason__c ),FIND(&quot;:&quot;, TEXT( NoRyanWhiteReason__c ))-1))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>API_NoRyanWhiteReason</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>API_NoSCHIPReason__c</fullName>
        <formula>TRIM(LEFT(TEXT( NoSCHIPReason__c ),FIND(&quot;:&quot;, TEXT( NoSCHIPReason__c ))-1))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>API_NoSCHIPReason</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>API_NoStateHealthInsReason__c</fullName>
        <formula>TRIM(LEFT(TEXT( NoStateHealthInsReason__c ),FIND(&quot;:&quot;, TEXT(NoStateHealthInsReason__c ))-1))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>API_NoStateHealthInsReason</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>API_NoVHAReason__c</fullName>
        <formula>TRIM( LEFT( TEXT(NoVHAReason__c) , FIND( &quot;:&quot;, TEXT(NoVHAReason__c))-1) )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>API_NoVHAReason</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>API_OtherBenefitsSource__c</fullName>
        <formula>TRIM( LEFT( TEXT(OtherBenefitsSource__c ) , FIND( &quot;:&quot;, TEXT(OtherBenefitsSource__c))-1) )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>API_OtherBenefitsSource</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>API_OtherIncomeAmount__c</fullName>
        <formula>IF(ISBLANK(OtherIncomeSourceAmount__c),&quot;&quot;,text(floor( OtherIncomeSourceAmount__c )) &amp;&quot;.&quot;&amp; lpad(text(( OtherIncomeSourceAmount__c-floor( OtherIncomeSourceAmount__c))*100),2,&quot;0&quot;))</formula>
        <label>API_OtherIncomeAmount</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>API_OtherIncomeSourceIdentify__c</fullName>
        <formula>OtherIncomeSourceSpecify__c</formula>
        <label>API_OtherIncomeSourceIdentify</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>API_OtherIncomeSource__c</fullName>
        <formula>TRIM( LEFT( TEXT(OtherIncomeSource__c ) , FIND( &quot;:&quot;, TEXT(OtherIncomeSource__c))-1) )</formula>
        <label>API_OtherIncomeSource</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>API_OtherInsuranceIdentify__c</fullName>
        <formula>OtherInsuranceSpecify__c</formula>
        <label>API_OtherInsuranceIdentify</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>API_OtherInsurance__c</fullName>
        <formula>TRIM( LEFT( TEXT(OtherInsurance__c) , FIND( &quot;:&quot;, TEXT(OtherInsurance__c))-1) )</formula>
        <label>API_OtherInsurance</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>API_OtherTANF__c</fullName>
        <formula>TRIM( LEFT( TEXT( OtherTANF__c ) , FIND( &quot;:&quot;, TEXT(OtherTANF__c))-1) )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>API_OtherTANF</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>API_PensionAmount__c</fullName>
        <formula>IF(ISBLANK(PensionAmount__c),&quot;&quot;, text(floor(PensionAmount__c)) &amp;&quot;.&quot;&amp; lpad(text((PensionAmount__c-floor(PensionAmount__c))*100),2,&quot;0&quot;))</formula>
        <label>API_PensionAmount</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>API_Pension__c</fullName>
        <formula>TRIM( LEFT( TEXT( Pension__c ) , FIND( &quot;:&quot;, TEXT(Pension__c))-1) )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>API_Pension</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>API_PrivateDisabilityAmount__c</fullName>
        <formula>IF(ISBLANK(PrivateDisabilityInsuranceAmount__c),&quot;&quot;,text(floor( PrivateDisabilityInsuranceAmount__c )) &amp;&quot;.&quot;&amp; lpad(text((PrivateDisabilityInsuranceAmount__c-floor(PrivateDisabilityInsuranceAmount__c))*100),2,&quot;0&quot;))</formula>
        <label>API_PrivateDisabilityAmount</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>API_PrivateDisability__c</fullName>
        <formula>TRIM( LEFT( TEXT( PrivateDisabilityInsurance__c ) , FIND( &quot;:&quot;, TEXT(PrivateDisabilityInsurance__c))-1) )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>API_PrivateDisability</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>API_PrivatePay__c</fullName>
        <formula>TRIM( LEFT( TEXT(PrivatePay__c) , FIND( &quot;:&quot;, TEXT(PrivatePay__c))-1) )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>API_PrivatePay</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>API_RyanWhiteMedDent__c</fullName>
        <formula>TRIM( LEFT( TEXT(RyanWhiteMedDent__c ) , FIND( &quot;:&quot;, TEXT(RyanWhiteMedDent__c))-1) )</formula>
        <label>API_RyanWhiteMedDent</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>API_SCHIP__c</fullName>
        <formula>TRIM( LEFT( TEXT( SCHIP__c ) , FIND( &quot;:&quot;, TEXT(SCHIP__c ))-1) )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>API_SCHIP</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>API_SNAP__c</fullName>
        <formula>TRIM( LEFT( TEXT( SNAP__c ) , FIND( &quot;:&quot;, TEXT(SNAP__c ))-1) )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>API_SNAP</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>API_SSDIAmount__c</fullName>
        <formula>IF(ISBLANK(SSDIAmount__c),&quot;&quot;,text(floor(SSDIAmount__c)) &amp;&quot;.&quot;&amp; lpad(text((SSDIAmount__c-floor(SSDIAmount__c))*100),2,&quot;0&quot;))</formula>
        <label>API_SSDIAmount</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>API_SSDI__c</fullName>
        <formula>TRIM( LEFT( TEXT( SSDI__c ) , FIND( &quot;:&quot;, TEXT(SSDI__c ))-1) )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>API_SSDI</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>API_SSIAmount__c</fullName>
        <formula>IF(ISBLANK(SSIAmount__c),&quot;&quot;,text(floor(SSIAmount__c)) &amp;&quot;.&quot;&amp; lpad(text((SSIAmount__c-floor(SSIAmount__c))*100),2,&quot;0&quot;))</formula>
        <label>API_SSIAmount</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>API_SSI__c</fullName>
        <formula>TRIM( LEFT( TEXT( SSI__c ) , FIND( &quot;:&quot;, TEXT(SSI__c ))-1) )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>API_SSI</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>API_SocSecRetirementAmount__c</fullName>
        <formula>IF(ISBLANK(SocSecRetirementAmount__c),&quot;&quot;,text(floor(SocSecRetirementAmount__c)) &amp;&quot;.&quot;&amp; lpad(text((SocSecRetirementAmount__c-floor(SocSecRetirementAmount__c))*100),2,&quot;0&quot;))</formula>
        <label>API_SocSecRetirementAmount</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>API_SocSecRetirement__c</fullName>
        <formula>TRIM( LEFT( TEXT( SocSecRetirement__c ) , FIND( &quot;:&quot;, TEXT(SocSecRetirement__c))-1) )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>API_SocSecRetirement</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>API_StateHealthIns__c</fullName>
        <formula>TRIM( LEFT( TEXT( StateHealthIns__c) , FIND( &quot;:&quot;, TEXT(StateHealthIns__c))-1) )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>API_StateHealthIns</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>API_TANFAmount__c</fullName>
        <formula>IF(ISBLANK(TANFAmount__c),&quot;&quot;,text(floor(TANFAmount__c)) &amp;&quot;.&quot;&amp; lpad(text((TANFAmount__c-floor(TANFAmount__c))*100),2,&quot;0&quot;))</formula>
        <label>API_TANFAmount</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>API_TANFChildCare__c</fullName>
        <formula>TRIM( LEFT( TEXT( TANFChildCare__c ) , FIND( &quot;:&quot;, TEXT(TANFChildCare__c ))-1) )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>API_TANFChildCare</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>API_TANFTransportation__c</fullName>
        <formula>TRIM( LEFT( TEXT( TANFTransportation__c ) , FIND( &quot;:&quot;, TEXT(TANFTransportation__c ))-1) )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>API_TANFTransportation</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>API_TANF__c</fullName>
        <formula>TRIM( LEFT( TEXT( TANF__c ) , FIND( &quot;:&quot;, TEXT(TANF__c))-1) )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>API_TANF</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>API_TotalMonthlyIncome__c</fullName>
        <formula>IF(ISBLANK(TotalMonthlyIncome__c),&quot;&quot;,text(floor(TotalMonthlyIncome__c)) &amp;&quot;.&quot;&amp; lpad(text((TotalMonthlyIncome__c-floor(TotalMonthlyIncome__c))*100),2,&quot;0&quot;))</formula>
        <label>API_TotalMonthlyIncome</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>API_UnemploymentAmount__c</fullName>
        <formula>IF(ISBLANK(UnemploymentAmount__c),&quot;&quot;,text(floor(UnemploymentAmount__c)) &amp;&quot;.&quot;&amp; lpad(text((UnemploymentAmount__c-floor(UnemploymentAmount__c))*100),2,&quot;0&quot;))</formula>
        <label>API_UnemploymentAmount</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>API_Unemployment__c</fullName>
        <formula>TRIM( LEFT( TEXT( Unemployment__c ) , FIND( &quot;:&quot;, TEXT(Unemployment__c ))-1) )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>API_Unemployment</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>API_VADisabilityNonServiceAmount__c</fullName>
        <formula>IF(ISBLANK(VADisabilityNonServiceAmount__c),&quot;&quot;,text(floor(VADisabilityNonServiceAmount__c)) &amp;&quot;.&quot;&amp; lpad(text((VADisabilityNonServiceAmount__c-floor(VADisabilityNonServiceAmount__c))*100),2,&quot;0&quot;))</formula>
        <label>API_VADisabilityNonServiceAmount</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>API_VADisabilityNonService__c</fullName>
        <formula>TRIM( LEFT( TEXT( VADisabilityNonService__c ) , FIND( &quot;:&quot;, TEXT(VADisabilityNonService__c ))-1) )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>API_VADisabilityNonService</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>API_VADisabilityServiceAmount__c</fullName>
        <formula>IF(ISBLANK(VADisabilityServiceAmount__c),&quot;&quot;,text(floor(VADisabilityServiceAmount__c)) &amp;&quot;.&quot;&amp; lpad(text((VADisabilityServiceAmount__c-floor(VADisabilityServiceAmount__c))*100),2,&quot;0&quot;))</formula>
        <label>API_VADisabilityServiceAmount</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>API_VADisabilityService__c</fullName>
        <formula>TRIM( LEFT( TEXT( VADisabilityService__c ) , FIND( &quot;:&quot;, TEXT(VADisabilityService__c ))-1) )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>API_VADisabilityService</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>API_VHAServices__c</fullName>
        <formula>TRIM( LEFT( TEXT( VHAServices__c) , FIND( &quot;:&quot;, TEXT(VHAServices__c))-1) )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>API_VHAServices</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>API_WIC__c</fullName>
        <formula>TRIM( LEFT( TEXT( WIC__c ) , FIND( &quot;:&quot;, TEXT(WIC__c ))-1) )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>API_WIC</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>API_WorkersCompAmount__c</fullName>
        <formula>IF(ISBLANK(WorkersCompensationAmount__c),&quot;&quot;,text(floor( WorkersCompensationAmount__c )) &amp;&quot;.&quot;&amp; lpad(text(( WorkersCompensationAmount__c-floor( WorkersCompensationAmount__c))*100),2,&quot;0&quot;))</formula>
        <label>API_WorkersCompAmount</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>API_WorkersComp__c</fullName>
        <formula>TRIM( LEFT( TEXT( WorkersCompensation__c ) , FIND( &quot;:&quot;, TEXT(WorkersCompensation__c))-1) )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>API_WorkersComp</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AP_OtherInsuranceIdentify__c</fullName>
        <formula>IF(ISBLANK(  OtherInsuranceSpecify__c   ),(OtherInsuranceSpecify__c ) ,&quot;&quot;)</formula>
        <label>AP_OtherInsuranceIdentify</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AlimonyAmount__c</fullName>
        <label>Alimony Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Alimony__c</fullName>
        <label>Alimony</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>hmisNoYesMissing</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>BenefitsfromAnySource__c</fullName>
        <label>Benefits from Any Source</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>hmisNoYesReasonsMissingData</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>COBRA__c</fullName>
        <label>COBRA</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>hmisNoYesMissing</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>ChildSupportAmount__c</fullName>
        <label>Child Support Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ChildSupport__c</fullName>
        <label>Child Support</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>hmisNoYesMissing</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>ConnectionWithSOAR__c</fullName>
        <label>Connection With SOAR</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>hmisNoYesReasonsMissingData</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>CoveredbyHealthInsurance__c</fullName>
        <label>Covered by Health Insurance</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>hmisNoYesReasonsMissingData</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>DataCollectionStage__c</fullName>
        <label>Data Collection Stage</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>hmisDataCollectionStage</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>DateCreated__c</fullName>
        <formula>TEXT(YEAR(DATEVALUE( CreatedDate )))&amp; &quot;-&quot;&amp;

LPAD(TEXT(MONTH(DATEVALUE(CreatedDate))), 2, &quot;0&quot;)&amp; &quot;-&quot; &amp;

LPAD(TEXT(DAY(DATEVALUE(CreatedDate))), 2, &quot;0&quot;)&amp; &quot; &quot;&amp;

LEFT(RIGHT(text( CreatedDate ),9),8)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>DateCreated</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DateDeleted__c</fullName>
        <formula>If(NOT(ISBLANK(DeletedDate__c)),

TEXT(YEAR(DATEVALUE( DeletedDate__c )))&amp; &quot;-&quot;&amp;

LPAD(TEXT(MONTH(DATEVALUE(DeletedDate__c))), 2, &quot;0&quot;)&amp; &quot;-&quot; &amp;

LPAD(TEXT(DAY(DATEVALUE(DeletedDate__c))), 2, &quot;0&quot;)&amp; &quot; &quot;&amp;

LEFT(RIGHT(text(DeletedDate__c),9),8),&quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>DateDeleted</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DateUpdated__c</fullName>
        <formula>If(NOT(ISBLANK( LastModifiedDate )),

TEXT(YEAR(DATEVALUE(LastModifiedDate )))&amp; &quot;-&quot;&amp;

LPAD(TEXT(MONTH(DATEVALUE(LastModifiedDate))), 2, &quot;0&quot;)&amp; &quot;-&quot; &amp;

LPAD(TEXT(DAY(DATEVALUE(LastModifiedDate))), 2, &quot;0&quot;)&amp; &quot; &quot;&amp;

LEFT(RIGHT(text(LastModifiedDate),9),8),&quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>DateUpdated</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DeletedDate__c</fullName>
        <label>DeletedDate</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>EarnedAmount__c</fullName>
        <description>4.02.03.03</description>
        <label>Earned Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Earned__c</fullName>
        <description>4.02.03</description>
        <label>Earned</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>hmisNoYesMissing</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>EmployerProvided__c</fullName>
        <label>Employer Provided</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>hmisNoYesMissing</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>ExportID__c</fullName>
        <label>ExportID</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GeneralAssistanceAmount__c</fullName>
        <label>General Assistance Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>GeneralAssistance__c</fullName>
        <label>General Assistance</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>hmisNoYesMissing</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>IncomeFromAnySource__c</fullName>
        <label>Income from Any Source</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>hmisNoYesReasonsMissingData</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>IndianHealthServices__c</fullName>
        <label>Indian Health Services</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>hmisNoYesMissing</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>InformationDate__c</fullName>
        <description>4.02.01.00</description>
        <label>Information Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>InsuranceFromAnySource__c</fullName>
        <label>Insurance From Any Source</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>hmisNoYesReasonsMissingData</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>MEDICARE__c</fullName>
        <label>MEDICARE</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>hmisNoYesMissing</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Medicaid__c</fullName>
        <label>Medicaid</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>hmisNoYesMissing</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>NoADAPReason__c</fullName>
        <label>No ADAP Reason</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>hmisNoAssistanceReason</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>NoCOBRAReason__c</fullName>
        <label>No COBRA Reason</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>hmisReasonNotInsured</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>NoEmployerProvidedReason__c</fullName>
        <label>No Employer Provided Reason</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>hmisReasonNotInsured</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>NoIndianHealthServicesReason__c</fullName>
        <label>No Indian Health Services Reason</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>hmisReasonNotInsured</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>NoMedicaidReason__c</fullName>
        <label>No Medicaid Reason</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>hmisReasonNotInsured</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>NoMedicareReason__c</fullName>
        <label>No Medicare Reason</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>hmisReasonNotInsured</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>NoPrivatePayReason__c</fullName>
        <label>No Private Pay Reason</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>hmisReasonNotInsured</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>NoRyanWhiteReason__c</fullName>
        <label>No Ryan White Reason</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>hmisNoAssistanceReason</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>NoSCHIPReason__c</fullName>
        <label>No SCHIP Reason</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>hmisReasonNotInsured</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>NoStateHealthInsReason__c</fullName>
        <label>No State Health Insurance Reason</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>hmisReasonNotInsured</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>NoVHAReason__c</fullName>
        <label>No VHA Reason</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>hmisReasonNotInsured</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>OtherBenefitsSourceSpecify__c</fullName>
        <label>Other Benefits Source Specify</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OtherBenefitsSource__c</fullName>
        <label>Other Benefits Source</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>hmisNoYesMissing</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>OtherIncomeSourceAmount__c</fullName>
        <label>Other Income Source Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>OtherIncomeSourceSpecify__c</fullName>
        <label>Other Income Source Specify</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OtherIncomeSource__c</fullName>
        <label>Other Income Source</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>hmisNoYesMissing</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>OtherInsuranceSpecify__c</fullName>
        <label>Other Insurance Specify</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OtherInsurance__c</fullName>
        <label>Other Insurance</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>hmisNoYesMissing</valueSetName>
        </valueSet>
    </fields>
</CustomObject>